# MyCodeHub

./: .gitignore  LICENSE  README.md  courseDesign2.sln
CSharpCourseDesign/: Program.cs  README.md
FreshmanCourseDesign/: .gitignore  CMakeLists.txt  README.md  build.sh  global.h  main.cpp  tools.cpp
FreshmanCourseDesign/Class/: fileProcess.cpp  fileProcess.h  userAccount.cpp  userAccount.h
FreshmanCourseDesign/UI/: depositwindow.cpp  depositwindow.h  depositwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_depositwindow.h  ui_mainwindow.h  ui_userwindow.h  userwindow.cpp  userwindow.h  userwindow.ui
Heart/: Heart.cpp  README.md
